--- a/shakeen.html
+++ b/shakeen.html
@@ -80,7 +80,7 @@
 <body>
     <div class="container">
         <header>
-            <img align="right" src="photo.jpg" width="100" height="140">
+            <img align="right" src="photo1.jpg" width="100" height="140">
             <h1>MOHAMMED SHAKEEN SResume</h1>
             <address>
                 Email: <a href="mailto:cse205@hicet.ac.in">cse205@hicet.ac.in</a><br>
